<resources>
    <string name="app">吃</string>
    <string name="app_name">订餐系统</string>
    <string name="btn_back">返回</string>
    <string name="center_top_name">订餐系统</string>
    <string name="btn_search">搜索</string>
    <string name="allfood">全部美食</string>
    <string name="bestfood">特价美食</string>
    <string name="onsale">本店特价</string>
    <string name="collect">收藏</string>
    <string name="add">添加</string>
    <string name="clear">清空</string>
    <string name="cart">购物车</string>
    <string name="submit">提交</string>
    <string name="chargeback">退单</string>
    <string name="amount">总计</string>
    <string name="comment">评论</string>
    <string name="dinningOline">订餐系统</string>
    <string name="my">我的</string>
    <string name="login_or_register">登录/注册</string>
    <string name="address">收货地址</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="homepage">首页</string>
    <string name="mycollect">我的收藏</string>
    <string name="trading">正在交易订单</string>
    <string name="history">历史交易订单</string>
    <string name="food">美食</string>
    <string name="order">订单</string>
    <string name="me">我</string>
    <string name="good_comment">好评优先</string>
    <string name="most_num">人气最高</string>
    <string name="good_price">好实惠</string>
    <string name="best_price">选精品</string>
    <string name="pick_up">我们为您推荐了几款，挑选你喜欢的菜品吧</string>
    <string name="welcome">欢迎光临☂☂☂☂☂</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="country">国家和地区</string>
    <string name="country_input">中国</string>
    <string name="phone">+86</string>
    <string name="phone_input">你的手机号</string>
    <string name="password_input">你的密码</string>
    <string name="problem">登录遇到问题？</string>
    <string name="send_code">发送验证码</string>
    <string name="code_input">请输入验证码</string>
    <string name="code">验证码</string>
    <string name="back">返回</string>
</resources>
