<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/my_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:clickable="true"
            android:src="@drawable/icon_qunliao"/>

        <TextView
            android:id="@+id/login_tv_myinfo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:text="@string/login_or_register" />

    </LinearLayout>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/ll"
        android:paddingLeft="30dp"
        android:gravity="center_vertical"
        android:text="@string/address"/>

    <TextView
        android:id="@+id/mycollect"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/address"
        android:paddingLeft="30dp"
        android:gravity="center_vertical"
        android:text="@string/mycollect" />
</RelativeLayout>
